--- a/main.html
+++ b/main.html
@@ -8,6 +8,10 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div>
+		<p>My current favourite song is Wavin'Flag </p>
+		<a href=https://youtu.be/WTJSt4wP2ME?si=59QuADTQpjCRi4FF>Wavin'Flag</a>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
